objects/FLODocs__Flow_Scanner_Info__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Action_Calls__c</fullName>
        <label>Action Calls</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Apex_Plugin_Calls__c</fullName>
        <label>Apex Plugin Calls</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Custumization_Id__c</fullName>
        <label>Custumization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Decisions_Fie__c</fullName>
        <label>Decisions Fie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Formulas_Fie__c</fullName>
        <label>Formulas Fie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Formulas__c</fullName>
        <label>Formulas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Process_Type__c</fullName>
        <label>Process Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Creates__c</fullName>
        <label>Record Creates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Creates_apiFieldName__c</fullName>
        <label>Record Creates apiFieldName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Creates_fie__c</fullName>
        <label>Record Creates fie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Deletes_Fie__c</fullName>
        <label>Record Deletes Fie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Deletes_Filter_Field__c</fullName>
        <label>Record Deletes Filter Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Deletes__c</fullName>
        <label>Record Deletes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Lookups_Field__c</fullName>
        <label>Record Lookups Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Lookups_Filter_Field__c</fullName>
        <label>Record Lookups Filter Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Lookups__c</fullName>
        <label>Record Lookups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Updates_Api_Field_Name__c</fullName>
        <label>Record Updates Api Field Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Updates_Fie__c</fullName>
        <label>Record Updates Fie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Updates_Filter_Field__c</fullName>
        <label>Record Updates Filter Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Updates__c</fullName>
        <label>Record Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Steps__c</fullName>
        <label>Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Variables__c</fullName>
        <label>Variables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Waits_Object_And_Field__c</fullName>
        <label>Waits Object And Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Waits__c</fullName>
        <label>Waits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__decisions__c</fullName>
        <label>decisions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Flow Scanner Info</label>
    <nameField>
        <label>Flow Scanner Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Scanner Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>